<resources>
    <string name="app_name">AppFinanciera</string>
    <string name="bienvenido_a_tu_app_financiera">Bienvenido a tu App Financiera</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="previous">Previous</string>
    <string name="bienvenido_a_tu_banco">Bienvenido a tu Banco</string>
    <string name="sign_to_continue">Sign to continue</string>
    <string name="numero_de_celular">Número de celular</string>
    <string name="contrasena">Contraseña</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="create_account_btn">CREATE ACCOUNT</string>
    <string name="identificacion">IDENTIFICACION</string>
    <string name="transaction_description">Transaction Description</string>
    <string name="_0_00">$ 0.00</string>
    <string name="date_transaction">29/05/2024 10:30:00</string>
    <string name="date_transaction_detail">29 de mayo de 2024 a las 10:30 am</string>
    <string name="valor_0_00">Valor: $ 0.00</string>
    <string name="monto_en_tu_cuenta">Monto en tu cuenta</string>
    <string name="actividad">Actividad</string>
    <string name="detalle_del_movimiento">Detalle del movimiento</string>
    <string name="actividad_realizada">Actividad Realizada</string>
    <string name="enviado_a">Usuario: </string>
    <string name="amount">¿Cuantó?</string>
    <string name="corresponsal_bancario">Corresponsal Bancario</string>
    <string name="logout">Logout</string>
    <string name="fecha_de_transaccion">Fecha de transacción:</string>
    <string name="descripcion">Descripción:</string>
    <string name="no_tienen_descripcion">No tienen descripción</string>
    <string name="celular_transaccion">Celular Transacción:</string>
    <string name="transferir_dinero">Transferir Dinero</string>
    <string name="cantidad">Cantidad</string>
    <string name="mensaje">Mensaje</string>
    <string name="cantidad_disponible">Cantidad Disponible</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="seleccione_el_numero_a_transferir">Seleccione el numero a transferir</string>
    <string name="transferencia">Transferencia</string>
    <string name="error_monto_500">El campo no puede estar vacío, ser cero o menor a 500 pesos</string>
    <string name="cantidad_insuficiente">No cuenta con la cantidad suficiente</string>
    <string name="bienvenido">"Bienvenido: "</string>
    <string name="balance_2f">Balance: $%,.2f</string>
    <string name="logout_seleccionado">Logout seleccionado</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas</string>
    <string name="login_vacio">El usuario o contraseña estan vacio</string>
    <string name="traslado_dinero">Traslado Dinero</string>
    <string name="resecci_n_dinero">Resección Dinero</string>
    <string name="error_al_vizualizar_informacion">Error al vizualizar información</string>
    <string name="error_correo_formato">Formato de correo electrónico inválido</string>
    <string name="error_pass_coinciden">Las contraseñas no coinciden.</string>
    <string name="insuficiente_caracteres">Cantidad insuficiente de caracteres</string>
    <string name="realizaste_un_registro_exitoso">Realizaste un registro exitoso</string>
    <string name="error_al_registrar_usuario">Error al registrar usuario</string>
</resources>