<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".View.MovementDetail.MovementDetailActivity">

    <LinearLayout
        android:id="@+id/containerTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageViewReturnDeatil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_return"
            android:tint="@color/colorPrimaryDark"
            android:padding="@dimen/_16dp"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/titleDetailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_del_movimiento"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSubTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerTitleDetail">


        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_transaccion"
            android:padding="@dimen/_4dp"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/userDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/actividad_realizada"/>

    </LinearLayout>

    <TextView
        android:id="@+id/titleSentToTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviado_a"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSubTitleDetail" />

    <TextView
        android:id="@+id/sentToTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corresponsal_bancario"
        android:layout_marginTop="@dimen/_4dp"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSentToTextView" />

    <TextView
        android:id="@+id/titlePhoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/celular_transaccion"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentToTextView" />

    <TextView
        android:id="@+id/phoneToTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="@dimen/_4dp"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePhoneTextView" />

    <TextView
        android:id="@+id/titleAmountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneToTextView" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:layout_marginTop="@dimen/_4dp"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAmountTextView" />

    <TextView
        android:id="@+id/titledateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_transaccion"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountTextView" />

    <TextView
        android:id="@+id/dateDetailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_transaction_detail"
        android:layout_marginTop="@dimen/_4dp"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titledateTextView" />

    <TextView
        android:id="@+id/titleDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_marginTop="@dimen/_24dp"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGrayText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDetailTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_tienen_descripcion"
        android:layout_marginTop="@dimen/_4dp"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDescriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>