<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8dp">

    <LinearLayout
        android:id="@+id/containerItemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_transaccion"
            android:padding="@dimen/_4dp"
            app:tint="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/nameItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sp"
                android:textStyle="bold"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/descriptionItemTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sp"
                android:text="@string/transaction_description"/>

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginBottom="@dimen/_4dp"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="textEnd"
                android:text="@string/_0_00"/>

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/colorGrayText"
                android:textStyle="bold"
                android:text="@string/date_transaction"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>